- layout issues absolute positioning of cards

--- a/cardsDesktop.css
+++ b/cardsDesktop.css
@@ -12,11 +12,13 @@ ul.card-list {
     justify-content: center;
     align-items: center;
     margin-right: 15px;
-    transform: translate(50px, 50px);
+    position: absolute;
+    top: 21.5%;
+    left: 15%;
 }
 
 li.card {
-    flex: 0 1 200px;
+    flex: 0 1 180px;
     margin: 0 2rem; 
     position: relative;
     text-align: center;
@@ -25,16 +27,15 @@ li.card {
     align-items: center;
     background-color:rgba(97, 97, 97, 0.5);
     height: 440px;
-    z-index: 99999;
 }
 
 .card-img {
-    width: 250px;
+    width: 240px;
 }
 
 .card-list h4 {
     font-family: bevan;
-    font-size: 1.4em;
+    font-size: 1.3em;
     color: #FFFFFF;
     text-shadow: 0px 100px 80px rgba(0, 0, 0, 0.8), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.4), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.4), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.3), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.1), 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.2);
 }
@@ -53,11 +54,11 @@ li.card:hover {
 }
 
 .cardOneImg {
-    transform: translateY(10%);
+    transform: translateY(25%);
 }
 
 .cardOneText {
-    transform: translateY(-1300%);
+    transform: translateY(-1200%);
 }
 
 /* Card Two */
@@ -69,19 +70,19 @@ li.card:hover {
 }
 
 .cardTwoImg {
-    transform: translateY(10%);
+    transform: translateY(-20%);
 }
 
 .cardTwoText {
-    transform: translateY(-1300%);
+    transform: translateY(-1%);
 }
 
 /* Card Three Card */ 
 .cardThree {
-    border-left: 5px solid #61D5CA;
-    border-top: 5px solid #61D5CA;
-    border-right: 5px solid #61D5CA;
-    transform: translate(-45%, 5%);
+    border-left: 5px solid #9282fa;
+    border-top: 5px solid #9282fa;
+    border-right: 5px solid #9282fa;
+    transform: translate(-25%, 7%);
 }
 
 .cardThreeImg {
@@ -89,21 +90,21 @@ li.card:hover {
 }
 
 .cardThreeText {
-    transform: translateY(-1300%);
+    transform: translateY(-1000%);
 }
 
 /* Card Four*/
 .cardFour {
-    border-left: 5px solid #61D5CA;
-    border-top: 5px solid #61D5CA;
-    border-right: 5px solid #61D5CA;
-    transform: translate(-45%, 5%);
+    border-left: 5px solid #cf88e2;
+    border-bottom: 5px solid #cf88e2;
+    border-right: 5px solid #cf88e2;
+    transform: translate(-15%, -11.5%);
 }
 
 .cardFourImg {
-    transform: translateY(10%);
+    transform: translateY(-20%);
 }
 
 .cardFourText {
-    transform: translateY(-1300%);
+    transform: translateY(-190%);
 }
