--- a/prodctsDesktop.css
+++ b/prodctsDesktop.css
@@ -11,13 +11,14 @@ body#desktopHP {
     display: flex; 
     flex-flow: column nowrap;
     justify-content: center;
+    align-items: center;
     padding: 30px;
     height: 100%;
     filter: contrast(1.75);
 }
 
 .deskBg {
-    background: url("imgs/backgrounds/bgProducts.png") no-repeat center;
+    background: url("imgs/backgrounds/bgProducts.png") repeat center;
     background-size: cover;
     height: 100%;
     width: 100%;
@@ -33,8 +34,23 @@ body#desktopHP {
 }
 
 /* Main Product Styles */
+
 ul {
     display: flex; 
     flex-flow: row wrap;
 }
 
+/* Intro Product Page */
+#cocktailsImg {
+    width: 200px;
+}
+
+#importsImg {
+    width: 170px;
+    transform: translate(0%, 19%);
+}
+
+#shakesImg {
+    width: 190px;
+    height: 280px;
+}
